1662.	[bug]		marcin
	Prevent deadlock in the Kea DHCP servers caused by allocating
	memory in the system signal handler. The issue was found on
	CentOS 7.6, but could possibly affect Kea running on any other
	OS.
	(Gitlab #796,!504, git f858d9d0b63a18370ebb8bd7d1b8250d0c5a1cb5)

1661.	[bug]		tmark
	kea-dhcp4 now rejects inbound client messages that have
	neither a hardware address nor a client identifier.
	(Gitlab #821,!501, git 60baf65d0c9de384b0da147b50b7fc3180fc54dd)

1660.	[func]		franek
	Statistics of the DHCP packets are now initialized upon the
	server startup. This makes the statistics available for fetching
	via control channel immediately after the server is started.
	(Gitlab #755,!503, git f0238d1b6e88dfedaa91029ec3b65e06c14cab34)

1659.	[bug]		razvan
	Corrected an issue in the DHCPv4 server logic whereby the user-defined
	option definitions were not committed which could result in
	configuration failures when values for such options were specified.
	(Gitlab #729, !434, git e5b68fb226161dcdef0e4d2d9d03d9bdb95af5e2)

Kea 1.6.0 released on Aug 28, 2019

1658.	[bug]		tmark
	Renamed the column "array" in option definition tables
	in MySQL schema to "is_array" to avoid a reserved word
	conflict introduced by MySQL 8.0.17.
	(Gitlab #853,!26-p, git 6665c3b6d0f9f2a45b7710e8e9a36fff8f99bf7f)

1657.	[bug]		marcin, tomek
	Corrected multiple occurrences of out of bounds vector reads.
	These could cause server to assert when GLIBCXX_ASSERTIONS
	was enabled during compilation. Also, elminated overflows as
	a result of strncpy.
	(Gitlab #851,!24-p, git 4b1d6ffc5ae4f1e1fa5990a644c9786e7f6afea6)

1656.	[bug]		marcin
	Corrected a bug in the Kea MySQL Configuration Backend which
	caused the Kea DHCPv6 server to incorrectly require the server
	tag to be provided with the remote-subnet6-option-set command.
	In addition, corrected issues with setting and deleting
	pool specific DHCP options via the Configuration Backend.